Fixed hero selection selected column icons jumping around

--- a/content/panorama/styles/custom_game/hero_selection_style.css
+++ b/content/panorama/styles/custom_game/hero_selection_style.css
@@ -170,7 +170,8 @@
 .SelectionImage
 {
     saturation: 0.0;
-    max-height: 40px;
+    width: 72px;
+    height: 40px;
     margin-bottom: 3px;
     margin-top: 3px;
     opacity: 0.0;
